@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/filelight-1.9_rc3.ebuild,v 1.7 2010/06/05 13:57:03 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/filelight-1.9_rc3.ebuild,v 1.8 2010/06/21 17:09:21 ssuominen Exp $
 
 EAPI=2
 KMNAME="playground/utils"
@@ -15,7 +15,7 @@ SRC_URI="http://kde-apps.org/CONTENT/content-files/99561-${MY_P}.tgz"
 
 LICENSE="GPL-2"
 SLOT="4"
-KEYWORDS="amd64 ~hppa ~ppc x86"
+KEYWORDS="amd64 ~ppc x86"
 IUSE="debug"
 
 RDEPEND="x11-apps/xdpyinfo"
@@ -27,7 +27,7 @@ PATCHES=( "${FILESDIR}/${P}-gcc45.patch" )
 src_prepare() {
 	sed -i \
 		-e '/qimageblitz/d' \
-		src/part/radialMap/map.cpp || die "Unused include wrt bug #307823"
+		src/part/radialMap/map.cpp || die #307823
 
 	kde4-base_src_prepare
 }
