@@ -1,6 +1,10 @@
 # ChangeLog for kde-misc/filelight
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/ChangeLog,v 1.42 2010/06/05 13:57:03 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/ChangeLog,v 1.43 2010/06/21 17:09:21 ssuominen Exp $
+
+  21 Jun 2010; Samuli Suominen <ssuominen@gentoo.org>
+  filelight-1.9_rc3.ebuild:
+  Remove hppa from KEYWORDS wrt #304363.
 
   05 Jun 2010; Samuli Suominen <ssuominen@gentoo.org>
   filelight-1.9_rc3.ebuild, +files/filelight-1.9_rc3-gcc45.patch:
